src/components/Filter/Filter.scss
@use "../../styles-assets/variables";

.filter {
  width: 240px;
  font-size: 14px;
  font-weight: 400;
  background-color: variables.$primary-color;
  color: #fff;
  margin: 28px;
  padding: 20px;
  &__title {
    margin-bottom: 20px;
    font-weight: 500;
    cursor: default;
  }
  &__box {
    border: none;
    border-bottom: 1px solid #fff;
    background-color: transparent;
    color: inherit;
    font-size: inherit;
    font-weight: inherit;
    margin-bottom: 10px;
    &:focus-visible {
      outline: none;
    }
  }
  &__type {
    display: flex;
    justify-content: space-between;
  }
  select {
    width: 110px;
  }
}

.open-filter,
.closing-space {
  display: none;
}

.remove-filters {
  background-color: #fff;
  border: none;
  font-size: inherit;
  color: variables.$primary-color;
  font-family: inherit;
  margin-top: 10px;
  cursor: pointer;
}

@media only screen and (max-width: 740px) {
  .filter {
    display: block;
    position: fixed;
    top: 0;
    right: -50%;
    width: 50%;
    height: 100vh;
    margin: 0;
    padding-top: 50px;
    font-size: 20px;
    background-color: rgba(63, 55, 201, 0.95);
    &__type {
      flex-direction: column;
    }
    &__box {
      margin: 20px 0;
    }
    select {
      width: 140px;
    }
    transition: right ease-in 200ms;
  }
  .closing-space {
    display: none;
    &--visible {
      display: block;
      height: 100vh;
      position: fixed;
      top: 0;
      left: 0;
      width: 50%;
      background-color: transparent;
    }
  }

  .filter--visible {
    right: 0;
  }

  .open-filter {
    display: block;
    position: fixed;
    top: 18px;
    right: 20px;
    background-color: transparent;
    border: none;
    color: variables.$primary-color;
    font-size: 16px;
    font-weight: 400;
    cursor: pointer;
    z-index: 1;
  }
  .open-button {
    color: #fff;
    font-size: 25px;
    top: 14px;
  }
}

